<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddingMedium"
    >


    <RelativeLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="@dimen/mediumText"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etMass"
            android:layout_below="@id/tv1"
            android:layout_width="match_parent"
            android:textColorHint="@color/colorHint"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_weight_kg"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textSize="@dimen/extraLargeText"
            android:inputType="numberDecimal"
            />

        <TextView
            android:id="@+id/tv2"
            android:layout_marginTop="@dimen/marginBig"
            android:layout_below="@id/etMass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="@dimen/mediumText"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/etHeight"
            android:layout_below="@id/tv2"
            android:layout_width="match_parent"
            android:textColorHint="@color/colorHint"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_height_m"
            android:fontFamily="sans-serif-light"
            android:textAlignment="center"
            android:textSize="@dimen/extraLargeText"
            android:inputType="numberDecimal"
            />


        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttonHeight"
            android:text="@string/calculate"
            android:background="@drawable/custom_button"
            android:fontFamily="sans-serif"
            android:layout_marginTop="@dimen/smallMargin"
            android:layout_below="@id/etHeight"
            android:layout_centerHorizontal="true"
            />


    </RelativeLayout>



</RelativeLayout>
